--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -22,8 +22,7 @@
 				<div class="card" style="border-radius: 15px;">
 					<div class="card-body p-5">
 						<h2 class="text-uppercase text-center mb-5">ERROR</h2>
-
-
+						<h4 th:text="${error}"></h4>
 					</div>
 				</div>
 			</div>
