--- a/src/main/resources/templates/tokens.html
+++ b/src/main/resources/templates/tokens.html
@@ -2,63 +2,37 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-    <title>identiDAT - Test</title>
+	<title>identiDAT - Admin</title>
 </head>
 
 <body>
 
-    <div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-    <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
-        </div>
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-10 col-lg-8 col-xl-8">
+	<div
+		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto">
+			<div class="col-12 col-md-10 col-lg-10 col-xl-12">
+				<div class="card" style="border-radius: 15px;">
+					<div class="card-body p-5 text-center">
+						<a href="/admin/tokens/delegates" class="btn btn-outline-secondary btn-lg">Delegados</a>
+                        <a href="/admin/tokens/cds" class="btn btn-outline-secondary btn-lg">CDs</a>
+						<a href="/admin/tokens/commissions" class="btn btn-outline-secondary btn-lg">Comisiones</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
 
-                <table id="census" class="table table-striped table-hover" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>Titulación</th>
-                            <th>Posición</th>
-                            <th>Diferenciador</th>
-                            <th>Token</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="token: ${tokens}">
-                            <td>
-                                <p th:text="${token.degree}"></p>
-                            </td>
-                            <td>
-                                <p th:text="${token.position}"></p>
-                            </td>
-                            <td>
-                                <p th:text="${token.diferentiator}"></p>
-                            </td>
-                            <td>
-                                <a th:href="@{'/register?token=' + ${token.token}}" th:text="${token.token}"></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </div>
-        </div>
-    </div>
-    </div>
-
-    <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-    <script th:src="@{/js/adminFunctions.js}"></script>
+	<script th:src="@{js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
