--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -42,21 +42,25 @@
                         <td th:text="${censusMember.degree}">
                         <td class="text-center">
                             <a th:href="@{profiles/edit/} + ${censusMember.id}"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F65555"
-                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M12 20h9"></path>
-                                    <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
-                                </svg></a>
+                                width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F65555"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 20h9"></path>
+                                <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                            </svg></a>
+                            <a th:href="@{profiles/positions/} + ${censusMember.id}">Profiles</a>
                         </td>
                     </tr>
                 </tbody>
             </table>
+            <div class="card-body p-5 text-center">
+                <a href="/admin/profiles/new" class="btn btn-outline-secondary btn-lg">New</a>
+            </div>
         </div>
     </div>
 
     <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
     <script th:src="@{/js/jquery.dataTables.min.js}"></script>
-	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-	<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-	<script th:src="@{/js/adminFunctions.js}"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+    <script th:src="@{/js/adminFunctions.js}"></script>
 </body>
