--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -100,6 +100,10 @@ body {
   box-shadow: none !important;
 }
 
+.errorMessage {
+  color: red;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
