--- a/src/main/resources/static/sass/main.scss
+++ b/src/main/resources/static/sass/main.scss
@@ -81,6 +81,10 @@ body {
     box-shadow: none!important;
 }
 
+.errorMessage {
+    color: red;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
