--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,21 +37,26 @@
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="email">Email:</label>
                                 <input type="email" id="email" name="email" class="form-control form-control-lg" disabled th:field="*{email}" required />
+                                <span class="errorMessage" th:if="${emailError}" th:text="${emailError}"></span>
                             </div>
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="personalID">DNI/NIE/Pasaporte:</label>
                                 <input type="text" id="personalID" name="personalID" class="form-control form-control-lg" th:field="*{personalID}" required />
+                                <span class="errorMessage" th:if="${personalIDError}" th:text="${personalIDError}"></span>
                             </div>
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="phone">Teléfono:</label>
-                                <input type="number" id="phone" name="phone" class="form-control form-control-lg" th:field="*{phone}" required />
+                                <input type="text" id="phone" name="phone" pattern="(\+[0-9]{3})?[0-9]{7,15}" class="form-control form-control-lg" th:field="*{phone}" required />
+                                <span class="errorMessage" th:if="${phoneError}" th:text="${phoneError}"></span>
                             </div>
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="degree">Titulación:</label>
-                                <input type="text" id="degree" name="degree" class="form-control form-control-lg" th:field="*{degree}" disabled value="GITST" required />
+                                <input type="hidden" id="degree" name="degree" class="form-control form-control-lg" th:field="*{degreeCode}" disabled required />
+                                <input type="text" class="form-control form-control-lg" th:value="*{degreeAcronym}" disabled required />
+                                <span class="errorMessage" th:if="${degreeError}" th:text="${degreeError}"></span>
                             </div>
 
                             <div class="form-outline mb-3">
@@ -60,12 +65,12 @@
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="position">Cargo:</label>
-                                <input type="text" id="position" name="position" class="form-control form-control-lg" th:value="${position}" disabled />
+                                <input type="text" id="position" name="position" class="form-control form-control-lg" th:value="*{position}" disabled />
                             </div>
 
                             <div th:if="${diferentiator > 0}" class="form-outline mb-3">
                                 <label class="form-label" for="diferentiator">Grupo/Curso:</label>
-                                <input type="text" id="diferentiator" name="diferentiator" class="form-control form-control-lg" th:value="${diferentiator}" disabled />
+                                <input type="text" id="diferentiator" name="diferentiator" class="form-control form-control-lg" th:value="*{diferentiator}" disabled />
                             </div>
 
                             <div class="form-check d-flex justify-content-center mb-5">
@@ -74,6 +79,8 @@
 									Estoy de acuerdo con los <a href="#!" class="text-body"><u>Términos y
 											Condiciones</u></a> de servicio
 								</label>
+                                <br/>
+                                <span class="errorMessage" th:if="${agreementError}" th:text="${agreementError}"></span>
                             </div>
 
                             <div class="d-flex justify-content-center">
